Updated from Personal Laptop